packages/app-components/src/SyntaxHighlightingEditor.module.css
/**
 *  SyntaxHighlightingEditor - .cSyntaxHighlightingEditor
 *  | Editor - .eEditor
 *  | HighlightedText - .eHighlightedText
 *  | Tooltip - .eTooltip
 *
 *  SyntaxHighlightingEditorMaximizedContent - .cSyntaxHighlightingEditorMaximizedContent
 */
.cSyntaxHighlightingEditor {
  --_padding: 3px;

  font: 11px / 15px monospace;
  border: 1px solid var(--cmp-border);
  border-radius: var(--cmp-radius);
  outline: none;
  position: relative;

  min-height: calc(attr(data-rows number, 3) * 15px + 2 * var(--_padding));
  background-color: var(--cmp-bg);

  .eEditor {
    font: 11px / 15px monospace;
    color: transparent;
    white-space: nowrap;
    overflow: auto;
    caret-color: var(--base-fg);
    border: 1px solid transparent;

    position: absolute;
    inset: 0;
    padding: var(--_padding);

    resize: none;
    z-index: 100;
    background: transparent;

    &:focus {
      outline: none;
      border: 1px solid var(--accent-border);
    }

    &:disabled {
      cursor: not-allowed;
      caret-color: transparent;
    }
  }

  .eHighlightedText {
    border: 1px solid transparent;
    margin: 0;
    overflow: scroll;
    position: absolute;
    inset: 0;
    padding: var(--_padding);

    &:focus {
      border: 1px solid var(--accent-chroma);
      outline: none;
    }

    :global(.syntax-label) {
      color: var(--accent-fg);
    }

    :global(.syntax-string) {
      color: var(--green-9);
    }

    :global(.syntax-bracket) {
      color: var(--base-fg);
    }

    :global(.syntax-props) {
      color: var(--accent-chroma);
    }

    :global(.syntax-error) {
      text-decoration: underline;
      text-decoration-color: var(--red-9);
      text-decoration-style: wavy;
    }
  }

  .eTooltip {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    font-size: 11px;
    position: fixed;
    background: var(--red-9);
    color: white;
    padding: 6px 10px;
    border-radius: 4px;
    z-index: 1000;
    pointer-events: none;
    max-width: 300px;
    word-wrap: break-word;
    white-space: normal;
  }

  &:focus-within {
    border-color: var(--accent-border);
  }
}

.cSyntaxHighlightingEditorMaximizedContent {
  .cSyntaxHighlightingEditor {
    height: 100%;
    z-index: 0;
  }
}

